crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__err_bad_format_value.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"--format\", \"xml\", \"list\"])"
---
$ engramdb --format xml list
exit: 2
--- stdout ---
--- stderr ---
error: invalid value 'xml' for '--format <FORMAT>'
  [possible values: pretty, json, plain]

For more information, try '--help'.
