crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__err_bad_sort_value.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"list\", \"--sort\", \"nonsense\"])"
---
$ engramdb list --sort nonsense
exit: 1
--- stdout ---
--- stderr ---
Error: Project not initialized
