crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__err_conflicting_format_and_json.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"--format\", \"pretty\", \"--json\", \"list\"])"
---
$ engramdb --format pretty --json list
exit: 2
--- stdout ---
--- stderr ---
error: the argument '--format <FORMAT>' cannot be used with '--json'

Usage: engramdb --format <FORMAT> <COMMAND>

For more information, try '--help'.
