crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__err_missing_required_arg.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"get\"])"
---
$ engramdb get
exit: 2
--- stdout ---
--- stderr ---
error: the following required arguments were not provided:
  <ID>

Usage: engramdb get <ID>

For more information, try '--help'.
